--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "swiper": "^11.1.3",
     "yet-another-react-lightbox": "^3.19.0"
   },
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-scroll": "^1.8.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
