--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "443:443"
     volumes:
       - ./nginx/nginx-conf.d:/etc/nginx/conf.d
-      - ./nginx/etc/letsencrypt:etc/letsencrypt
+      - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
     restart: always
   
@@ -28,4 +28,3 @@ services:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
     command: certonly --webroot --webroot-path=/var/www/html --email andrey2455@gmail.com --agree-tos --no-eff-email -d ncopit.ru
-    restart: always
