--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -11,10 +11,10 @@ server {
         allow all;
         root /var/www/html;
     }
-    # return 301 https://$host$request_uri;
-    location / {
-        rewrite ^ https://$host$request_uri? permanent;
-    }
+    return 301 https://$host$request_uri;
+    # location / {
+    #     rewrite ^ https://$host$request_uri? permanent;
+    # }
 }
 
 server {
