--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -7,7 +7,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name ncopit.ru;
-    location ~ /.well-known/acme-challenge {
+    location /.well-known/acme-challenge {
         allow all;
         root /var/www/html;
     }
