--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -11,7 +11,7 @@ server {
         allow all;
         root /var/www/html;
     }
-    return 301 https://$host$request_uri;
+    # return 301 https://$host$request_uri;
     # location / {
     #     rewrite ^ https://$host$request_uri? permanent;
     # }
