--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -11,29 +11,29 @@ server {
         allow all;
         root /var/www/html;
     }
-    # return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
     # location / {
     #     rewrite ^ https://$host$request_uri? permanent;
     # }
-    location / {
+    # location / {
+    # proxy_pass http://app;
+    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    # proxy_set_header Host $host;
+    # proxy_redirect off;
+}
+
+server {
+  listen 443 ssl http2;
+  listen [::]:443 ssl http2;
+  server_name ncopit.ru;
+
+  ssl_certificate /etc/letsencrypt/my_ssl_cert.crt;
+  ssl_certificate_key /etc/letsencrypt/my_ssl_key.key;
+
+  location / {
     proxy_pass http://app;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
     proxy_redirect off;
-}
-
-# server {
-#   listen 443 ssl http2;
-#   listen [::]:443 ssl http2;
-#   server_name ncopit.ru;
-
-#   ssl_certificate /etc/letsencrypt/my_ssl_cert.crt;
-#   ssl_certificate_key /etc/letsencrypt/my_ssl_key.key;
-
-#   location / {
-#     proxy_pass http://app;
-#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#     proxy_set_header Host $host;
-#     proxy_redirect off;
-#   }
+  }
 }
