--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -27,8 +27,8 @@ server {
   listen [::]:443 ssl http2;
   server_name ncopit.ru;
 
-  ssl_certificate /etc/letsencrypt/my_ssl_cert.crt;
-  ssl_certificate_key /etc/letsencrypt/my_ssl_key.key;
+  ssl_certificate /etc/letsencrypt/live/www.ncopit.ru/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/privkey.pem;
 
   location / {
     proxy_pass http://app;
