--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -28,7 +28,7 @@ server {
   server_name ncopit.ru;
 
   ssl_certificate /etc/letsencrypt/live/www.ncopit.ru/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/privkey.pem;
+  ssl_certificate_key /etc/letsencrypt/live/www.ncopit.ru/privkey.pem;
 
   location / {
     proxy_pass http://app;
