--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -11,29 +11,27 @@ server {
         allow all;
         root /var/www/html;
     }
-    return 301 https://$host$request_uri;
-    # location / {
-    #     rewrite ^ https://$host$request_uri? permanent;
-    # }
-    # location / {
-    # proxy_pass http://app;
-    # proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    # proxy_set_header Host $host;
-    # proxy_redirect off;
+    # return 301 https://$host$request_uri;
+    location / {
+      proxy_pass http://app;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_redirect off;
+    }
 }
 
-server {
-  listen 443 ssl http2;
-  listen [::]:443 ssl http2;
-  server_name ncopit.ru;
+# server {
+#   listen 443 ssl http2;
+#   listen [::]:443 ssl http2;
+#   server_name ncopit.ru;
 
-  ssl_certificate /etc/letsencrypt/live/www.ncopit.ru/fullchain.pem;
-  ssl_certificate_key /etc/letsencrypt/live/www.ncopit.ru/privkey.pem;
+#   ssl_certificate /etc/letsencrypt/live/www.ncopit.ru/fullchain.pem;
+#   ssl_certificate_key /etc/letsencrypt/live/www.ncopit.ru/privkey.pem;
 
-  location / {
-    proxy_pass http://app;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-  }
-}
+#   location / {
+#     proxy_pass http://app;
+#     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     proxy_set_header Host $host;
+#     proxy_redirect off;
+#   }
+# }
