--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -6,7 +6,7 @@ server {
     # Redirect HTTP requests to HTTPS.
     listen 80;
     listen [::]:80;
-    server_name ncopit.ru;
+    server_name dolina.axonix.ru;
     location /.well-known/acme-challenge {
         allow all;
         root /var/www/html;
