--- a/nginx/nginx-conf.d/default.conf
+++ b/nginx/nginx-conf.d/default.conf
@@ -23,7 +23,7 @@ server {
 server {
   listen 443 ssl http2;
   listen [::]:443 ssl http2;
-  server_name ncopit.ru;
+  server_name dolina.axonix.ru;
 
   ssl_certificate /etc/letsencrypt/live/www.dolina.axonix.ru/fullchain.pem;
   ssl_certificate_key /etc/letsencrypt/live/www.dolina.axonix.ru/privkey.pem;
