--- a/docker-compose.init.yml
+++ b/docker-compose.init.yml
@@ -16,15 +16,12 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx-conf.d/main.conf:/etc/nginx/conf.d
+      - ./nginx/nginx-conf.d/init.conf:/etc/nginx/conf.d
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
     restart: always
   
-  # certbot запускается для мониторинга сертификатов.
-  # Каждые 12 часов выполняется команда certbot renew.
-  # Если сертификаты скоро закончатся, то запрашивается выпуск новых.
-  # После этого перезагружается nginx.
+  # certbot запускается для получения сертификатов
   certbot:
     image: certbot/certbot
     depends_on:
@@ -33,4 +30,4 @@ services:
     volumes:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; nginx -s reload; sleep 12h; done'"
+    command: certonly --webroot --webroot-path=/var/www/html --email andrey2455@gmail.com --agree-tos --no-eff-email -d www.dolina.axonix.ru -d dolina.axonix.ru
