--- a/nginx/nginx-conf.d/main.conf
+++ b/nginx/nginx-conf.d/main.conf
@@ -1,3 +1,5 @@
+# Основной файл конфигов для nginx.
+
 upstream app {
     server app:3000;
 }
@@ -12,12 +14,6 @@ server {
         root /var/www/html;
     }
     return 301 https://$host$request_uri;
-    # location / {
-    #   proxy_pass http://app;
-    #   proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #   proxy_set_header Host $host;
-    #   proxy_redirect off;
-    # }
 }
 
 server {
