--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx-conf.d/main.conf:/etc/nginx/conf.d
+      - ./nginx/nginx-conf.d/:/etc/nginx/conf.d
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
     restart: always
