--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,4 +33,5 @@ services:
     volumes:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; nginx -s reload; sleep 12h; done'"
+      - ./certbot/renew_and_reload.sh:/renew_and_reload.sh
+    entrypoint: "/renew_and_reload.sh"
