--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,4 @@ services:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
       - ./certbot/renew_and_reload.sh:/renew_and_reload.sh
-    entrypoint: "/renew_and_reload.sh"
+    entrypoint: certbot renew
