--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,5 +33,5 @@ services:
     volumes:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
-      - ./certbot/renew_and_reload.sh:/renew_and_reload.sh
+      - /var/run/docker.sock:/var/run/docker.sock
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew && docker-compose exec nginx nginx -s reload; sleep 12h; done'"
