--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,4 +34,4 @@ services:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
       - /var/run/docker.sock:/var/run/docker.sock
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew && docker-compose exec nginx nginx -s reload; sleep 12h; done'"
+    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew && docker compose exec nginx nginx -s reload; sleep 12h; done'"
