--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,4 +33,5 @@ services:
     volumes:
       - ./nginx/etc/letsencrypt:/etc/letsencrypt
       - ./nginx/www:/var/www/html
-    entrypoint: "certbot renew"
+    # Чтобы контейнер не выключался после завершения ставим команду sleep
+    entrypoint: /bin/sh -c "sleep infinity"
