--- a/docker-compose.init.yml
+++ b/docker-compose.init.yml
@@ -15,9 +15,9 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx/nginx-init.d:/etc/nginx/conf.d
-      - ./nginx/etc/letsencrypt:/etc/letsencrypt
-      - ./nginx/www:/var/www/html
+      - ./docker/nginx/nginx-init.d:/etc/nginx/conf.d
+      - ./docker/nginx/etc/letsencrypt:/etc/letsencrypt
+      - ./docker/nginx/www:/var/www/html
     restart: always
   
   # certbot запускается для получения сертификатов
@@ -27,6 +27,6 @@ services:
     depends_on:
       - nginx
     volumes:
-      - ./nginx/etc/letsencrypt:/etc/letsencrypt
-      - ./nginx/www:/var/www/html
+      - ./docker/nginx/etc/letsencrypt:/etc/letsencrypt
+      - ./docker/nginx/www:/var/www/html
     command: certonly --webroot --webroot-path=/var/www/html --email andrey2455@gmail.com --agree-tos --no-eff-email -d www.dolina.axonix.ru -d dolina.axonix.ru
