Изменил домен на прод

--- a/docker/nginx/nginx-init.d/default.conf
+++ b/docker/nginx/nginx-init.d/default.conf
@@ -8,7 +8,7 @@ server {
     # Redirect HTTP requests to HTTPS.
     listen 80;
     listen [::]:80;
-    server_name dolina.axonix.ru;
+    server_name горная-долина.рф;
     location /.well-known/acme-challenge {
         allow all;
         root /var/www/html;
