--- a/docker-compose.init.yml
+++ b/docker-compose.init.yml
@@ -29,4 +29,4 @@ services:
     volumes:
       - ./docker/nginx/etc/letsencrypt:/etc/letsencrypt
       - ./docker/nginx/www:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html --email andrey2455@gmail.com --agree-tos --no-eff-email -d www.dolina.axonix.ru -d dolina.axonix.ru
+    command: certonly --webroot --webroot-path=/var/www/html --email admin@axonix.ru --agree-tos --no-eff-email -d www.xn----7sbbjhyumfdet1r.xn--p1ai -d xn----7sbbjhyumfdet1r.xn--p1ai
