--- a/test-docker-compose.yml
+++ b/test-docker-compose.yml
@@ -8,25 +8,24 @@ services:
   
   nginx:
     image: nginx:1.19.8-alpine
-    container_name: nginx
     depends_on:
       - app
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./docker/nginx/test-nginx-init.d:/etc/nginx/conf.d
+      - ./docker/nginx/test-nginx-conf.d/:/etc/nginx/conf.d
       - ./docker/nginx/etc/letsencrypt:/etc/letsencrypt
       - ./docker/nginx/www:/var/www/html
     restart: always
   
-  # certbot запускается для получения сертификатов
   certbot:
     image: certbot/certbot
-    container_name: certbot
     depends_on:
       - nginx
+    container_name: certbot
     volumes:
       - ./docker/nginx/etc/letsencrypt:/etc/letsencrypt
       - ./docker/nginx/www:/var/www/html
-    command: certonly --webroot --webroot-path=/var/www/html --email admin@axonix.ru --agree-tos --no-eff-email -d www.dolina.axonix.ru -d dolina.axonix.ru
+    # Чтобы контейнер не выключался после завершения ставим команду sleep
+    entrypoint: /bin/sh -c "sleep infinity"
