--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.2.3",
+    "platform": "^1.3.6",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
