--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "next": "14.2.3",
+    "platform": "^1.3.6",
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
+    "@types/platform": "^1.3.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-scroll": "^1.8.10",
