--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
-    "swiper": "^11.1.3",
-    "yet-another-react-lightbox": "^3.19.0"
+    "swiper": "^11.1.3"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
