--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@gsap/react": "^2.1.1",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
+    "gsap-trial": "^3.12.5",
     "next": "14.2.3",
     "platform": "^1.3.6",
     "react": "^18",
