--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-scroll": "^1.9.0",
+    "sharp": "^0.33.5",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
